--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "start": "gatsby serve"
+  },
+  "devDependencies": {
+    "dotenv": "^5.0.1"
   }
 }
